Correção de bugs

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+   
     <link rel="stylesheet" href="mobile.css">
     <title>Marjorie Fonseca</title>
 </head>
@@ -63,7 +64,7 @@
                     <h3>Whatsapp</h3>
                 </div>
             </div>
-            <a href="#"><button>ACESSAR AGORA</button></a>
+            <a href="https://wa.me/message/ZAD3BKTO6Y5WK1"><button>ACESSAR AGORA</button></a>
         </div>
     </div>
     <div class="logo">
