Reajuste para o mobile

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 </div>
                 <!-- <img src="assets/book.png" alt=""> -->
             </div>
-            <a href="#"><button>COMPRAR</button></a>
+            <a href="#" class="link"><button>COMPRAR</button></a>
             <div class="item2">
                 <div class="description">
 
