imagens mais otimizadas e leves

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="background">
                 </div>
                 <div class="img">
-                    <img src="assets/livro.png" alt="">
+                    <img src="assets/livro_4_11zon.webp" alt="">
                 </div>
                 <div class="description">
                     <p>O AMOR CABE EM <br> muitos COLOS</p>
