--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
                 </div>
             </div>
             <a href="#"><button>ACESSAR AGORA</button></a>
-            <div class="item3">
+<!--             <div class="item3">
                 <div class="description">
                     <p>CURSO FILHOS<br>SEGUROS ONLINE</p>
                     <h3>Lista de Espera</h3>
                 </div>
-            </div>
+            </div> -->
             <a href="#"><button>CADASTRAR</button></a>
             <div class="item4">
                 <div class="description">
