--- a/index.html
+++ b/index.html
@@ -48,8 +48,9 @@
                     <p>CURSO FILHOS<br>SEGUROS ONLINE</p>
                     <h3>Lista de Espera</h3>
                 </div>
-            </div> -->
+            </div>
             <a href="#"><button>CADASTRAR</button></a>
+            -->
             <div class="item4">
                 <div class="description">
 
